# url-shortener

./: Cargo.toml  README.md
migrations/: 20250328034853_links.up.sql  20250331163823_link_statistics.up.sql
src/: auth.rs  main.rs  routes.rs
